# speedtest

./: 404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  generate_dashboard.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test.json  tox.ini
.github/workflows/: deploy.yml  publish-pypi.yml  test.yml
api-reference/: index.html
contributing/: index.html
docker/: index.html
docs/: api-reference.md  contributing.md  docker.md  faq.md  features.md  index.md  installation.md  modules.md  usage.md  web-dashboard.md
faq/: index.html
features/: index.html
installation/: index.html
modules/: index.html
scripts/: entrypoint.sh
search/: search_index.json
speedtest/: main.py
speedtest/core/: speedtest.py
speedtest/models/: metadata.py  result.py
speedtest_cloudflare_cli/: main.py
speedtest_cloudflare_cli/core/: dashboard.py  speedtest.py
speedtest_cloudflare_cli/models/: metadata.py  result.py
templates/: dashboard.j2
tests/: test_main.py
tests/core/: test_speedtest.py
usage/: index.html
web-dashboard/: index.html
