[project]
name = "speedtest-cloudflare-cli"
dynamic = ["version"]
description = "Speed CLI tool to test your network connectivity"
authors = [{ name = "Dylann Batisse", email = "dylann.batisse@protonmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.9,<3.14"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "ping3>=4.0.8",
    "pydantic>=2.10.3",
    "rich>=13.9.4",
    "rich-click>=1.8.5",
]

[project.urls]
Homepage = "https://takitsu21.github.io/speedtest/"
Repository = "https://github.com/takitsu21/speedtest"
Documentation = "https://takitsu21.github.io/speedtest/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.20.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.9",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project.scripts]
speedtest-cli = "speedtest_cloudflare_cli.main:main"

[tool.mypy]
files = ["speedtest"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true
#fail_under = 44

[tool.coverage.run]
branch = true
source = ["speedtest_cloudflare_cli"]

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0"
